(add)[dev-doc,encode-decode] Add a module for some common knowledge, and a module for encode and decode operation.